- Fixed bug #44127 (UNIX abstract namespace socket connect does not work)